force-app/main/default/objects/Analise_de_Credito__c/Analise_de_Credito__c.object-meta.xml
<CustomObject>
    <label>Análise de Crédito</label>
    <nameField>
        <displayFormat>AC {000}</displayFormat>
        <label>Nº</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Análises de Crédito</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>