force-app/main/default/objects/Analise_de_Credito__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Análises de Crédito</relationshipLabel>
    <relationshipName>An_lises_de_Cr_dito</relationshipName>
    <type>Lookup</type>
</CustomField>