force-app/main/default/objects/Analise_de_Credito__c/fields/Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Análises de Crédito</relationshipLabel>
    <relationshipName>An_lises_de_Cr_dito</relationshipName>
    <type>Lookup</type>
</CustomField>