force-app/main/default/objects/Analise_de_Credito__c/fields/Regiao__c.field-meta.xml
<CustomField>
    <fullName>Regiao__c</fullName>
    <formula>IF(!ISBLANK(Oportunidade__c), Oportunidade__r.Regiao_Nome__c, Cotacao__r.Opportunity.Regiao_Nome__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Região</label>
    <type>Text</type>
</CustomField>