force-app/main/default/objects/Analise_de_Credito__c/fields/Valor_solicitado__c.field-meta.xml
<CustomField>
    <fullName>Valor_solicitado__c</fullName>
    <inlineHelpText>Valor de crédito solicitado para o cliente</inlineHelpText>
    <label>Valor de crédito solicitado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>