force-app/main/default/objects/Analise_de_Credito__c/validationRules/Alteracao_financeiro.validationRule-meta.xml
<ValidationRule>
    <fullName>Alteracao_financeiro</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 $User.Id != &apos;005U400000FddyX&apos;,
$User.ProfileId != &apos;00e5A000001yRA5&apos;,
$User.ProfileId != &apos;00e6e000002JQTI&apos;,
$User.Ignorar_erros__c !=true,
OR(TEXT(Status__c) == &apos;Em andamento&apos;, 
   TEXT(Status__c) == &apos;Aprovado&apos;)
)</errorConditionFormula>
    <errorMessage>O processo já está em adamento ou já foi finalizado.</errorMessage>
</ValidationRule>