force-app/main/default/objects/Analise_de_Credito__c/validationRules/Status_novo.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_novo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
TEXT(Status__c) != &apos;Novo&apos;
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>O status deve começar em Novo.</errorMessage>
</ValidationRule>