force-app/main/default/objects/Analise_de_Credito__c/validationRules/Vinculo.validationRule-meta.xml
<ValidationRule>
    <fullName>Vinculo</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
ISNULL(Cotacao__c),
ISNULL(Oportunidade__c),
ISNULL(Conta__c)
)</errorConditionFormula>
    <errorMessage>Vincule a análise a uma oportunidade ou uma cotação.</errorMessage>
</ValidationRule>