force-app/main/default/objects/Analise_de_Credito__c/listViews/Col_mbia_lista.listView-meta.xml
<ListView>
    <fullName>Col_mbia_lista</fullName>
    <columns>NAME</columns>
    <columns>Cotacao__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Regiao__c</field>
        <operation>equals</operation>
        <value>COLÔMBIA</value>
    </filters>
    <label>Colômbia</label>
</ListView>