force-app/main/default/objects/Analise_de_Credito__c/listViews/Em_andamento.listView-meta.xml
<ListView>
    <fullName>Em_andamento</fullName>
    <columns>NAME</columns>
    <columns>Cotacao__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Em andamento</value>
    </filters>
    <label>Em andamento</label>
</ListView>